<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/blueback" >
 
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="25dp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/villages_array"
        android:prompt="@string/villages_list"
        android:layout_marginTop="30dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/history_array"
		android:prompt="@string/history_list"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/Submit"
        android:background="@drawable/round"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Submit"
        android:textColor="@color/YellowGreen"
        android:textStyle="bold" />
 
</LinearLayout>